# collection_sorter

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  poetry.ini  pyproject.toml  setup.py  usage.md
.claude/commands/: context_main.md  fix_code.md  implement_task.md  plan.md
collection_sorter/: __init__.py  __main__.py  cli.py  files.py  manga.py  manga_sort.py  manga_sorter.py  mass_rename.py  mass_zip.py  move.py  operations.py  organizer.py  project_logging.py  rename.py  templates.py  video_rename.py  zipper.py
collection_sorter/cli_handlers/: __init__.py  base_handler.py  manga_handler.py  rename_handler.py  video_handler.py  zip_handler.py
collection_sorter/cli_patterns/: __init__.py
collection_sorter/common/: __init__.py  archive.py  base.py  components.py  config.py  config_manager.py  config_models.py  duplicates.py  exceptions.py  factories.py  file_processor.py  files.py  interactive.py  logging.py  move.py  operations.py  paths.py  progress.py  rename.py  result.py  result_processor.py  result_strategies.py  services.py  sorter.py  strategies.py  templates.py  templates_extensions.py
collection_sorter/config/: config.py  config_manager.py  config_models.py
collection_sorter/files/: __init__.py  duplicates.py  file_processor.py  files.py  move.py  operations.py  paths.py  rename.py
collection_sorter/manga/: manga.py  manga_sorter.py  manga_template.py
collection_sorter/music/: music_collection.py
collection_sorter/result/: __init__.py  result.py  result_processor.py  result_strategies.py
collection_sorter/strategies/: __init__.py  strategies.py
collection_sorter/templates/: __init__.py  templates.py  templates_extensions.py
collection_sorter/tests/: test_archive.py  test_cli_integration.py  test_direct_manga_processor.py  test_factories.py  test_files.py  test_manga_handler.py  test_manga_processor.py  test_manga_processor_template.py  (+10 more)
docs/: circular_import_resolution.md  configuration.md  duplicate_handling.md  project_structure.md  refactoring_plan.md  usage_analysis.md  validation_framework.md
tests/: duplicates.txt  files.txt  test_archive.py  test_cli_integration.py  test_cli_manga_integration.py  test_cli_zip_integration.py  test_collection_path.py  test_factories.py  test_manga.py  test_manga_processor.py  test_manga_processor_template.py  test_manga_sort.py  test_manga_sorter.py  test_mass_rename.py  test_mass_zip.py  test_move.py  test_music_collector.py  test_rename_processor.py  test_result_pattern.py  test_strategies.py  test_templates.py  test_video_processor.py  test_vido_remove.py  test_zip_processor.py  test_zipper.py
(+42 files in other folders)
