[tool.poetry]
name = "collection_sorter"
version = "0.0.1"
description = ""
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pycountry = "^20.7.3"
parse = "^1.19.0"
click = "^7.1.2"
python-dateutil = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
