[tool.poetry]
name = "collection_sorter"
version = "0.0.1"
description = ""
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
pycountry = "^23.12.11"
parse = "^1.20.1"
click = "^8.1.7"
python-dateutil = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
