[tool.poetry]
name = "collection_sorter"
version = "0.1.1"
description = "A command-line tool for organizing and processing various file collections"
authors = ["Ivan Shchekoldin <darthmantis@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/aldfiar/collection-sorter"
repository = "https://github.com/aldfiar/collection-sorter"
keywords = ["file-management", "cli", "organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
pycountry = "^23.12.11"
parse = "^1.20.1"
click = "^8.1.7"
python-dateutil = "^2.9.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
collection-sorter = "collection_sorter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
